syntax = "proto3";

import "space.proto";

option csharp_namespace = "Gymize.Protobuf";

message ImageFrameProto {
	InstanceProto image = 1;
	float duration = 2;
}

message AudioFrameProto {
	InstanceProto data = 1;
	float duration = 2;
}

message VideoProto {
	repeated ImageFrameProto images = 1;
	repeated AudioFrameProto audios = 2;
}

message RecordingProto {
	string render_mode = 1;
	VideoProto video = 2;
}